# freetime

./: .env.sample  .firebaserc  .gitignore  README.md  database.rules.json  firebase.json  firestore.rules  package-lock.json
.firebase/: hosting.YnVpbGQ.cache  hosting.ZnJlZXRpbWUvcHVibGlj.cache  hosting.cHVibGlj.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
agents/: main.py  requirements.txt  serviceAccountKey.json  tools.py
bot_agents/: agents.py  agents_test.py  config.yaml  discord_bot.py  interest_data.json  main.py  output_schema.json  schedule_data.json  telegram_bot.py  test_commands.py  test_script.py
bot_agents/tools/: data_fetch_tool.py  discord_message_tool.py  geolocation.py  reader_tool.py  search_tool.py  writer_tool.py
freetime/: .gitignore  package-lock.json  package.json
freetime/src/: App.css  App.js  firebase.js
freetime/src/components/: FirebaseWriter.js  MyCalendar.css  MyCalendar.js
freetime/src/pages/: CalendarPage.css  CalendarPage.js  FinalPage.css  FinalPage.js  LandingPage.js  OnboardingInterests.css  OnboardingInterests.js  OnboardingProfile.css  OnboardingProfile.js
functions/: main.py  requirements.txt
jigsaw_crew/jigsaw/: README.md  pyproject.toml
jigsaw_crew/jigsaw/src/jigsaw/: crew.py  main.py  report.md  summary_output.md  web_search_results.txt
jigsaw_crew/jigsaw/src/jigsaw/config/: agents.yaml  tasks.yaml
jigsaw_crew/jigsaw/src/jigsaw/tools/: geolocation.py  summary.py  websearch.py
multion_crew/: calendar.py  multion.mjs  package.json
(+3 files in other folders)
