[tool.poetry]
name = "jigsaw"
version = "0.1.0"
description = "jigsaw using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
jigsaw = "jigsaw.main:run"
train = "jigsaw.main:train"
replay = "jigsaw.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
